Bug 1133191 - Part 0: Add indentation variant to JS::BuildStackString. r=jandem

--HG--
extra : commitid : HOISGMqgvwC
extra : rebase_source : f517d82e3798407ba02f24adfc7da5643efd90a4